# ssloc_ros

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE-MIT  README.md  package.xml
launch/: azure_kinect.launch  kinect.launch  ssloc.launch
msg/: Audio.msg  UnitSstArray.msg
msgs/: UnitSsl.msg  UnitSslArray.msg
param/: azure_kinect.yaml  defaults.yaml  kinect.yaml
src/: config.rs  main.rs  msgs.rs
