[package]
name = "ssloc"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/ssloc.ros"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
anyhow = "1.0.71"
env_logger = "0.10"
# lib = { package = "ssloc", path = "../../../ssloc/" }
lib = { package = "ssloc", git = "https://github.com/ModProg/ssloc" }
nalgebra = "0.32.2"
rosrust = "0.9"
# rosrust_dynamic_reconfigure = { version = "0.1.0", path = "../../../../../Development/Rust/rosrust_dynamic_reconfigure" }
rosrust_dynamic_reconfigure.git = "https://github.com/ModProg/rosrust_dynamic_reconfigure"
rosrust_msg = "0.1"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "package.xml"
search = "<version>.*?</version>"
replace = "<version>{{version}}</version>"
