[package]
name = "ssloc_ros"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/ssloc_ros"

[features]
# default = ["odas_messages"]
odas_messages = []

[dependencies]
alsa = "0.7"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
env_logger = { version = "0.10", default-features = false }
extend = "1.2"
image = { version = "0.24", default-features = false, features = ["png"] }
nalgebra = "0.32"
rosrust = "0.9"
rosrust_dynamic_reconfigure = "0.1"
#rosrust_dynamic_reconfigure = { version = "0.1.0", path = "../../../../../Development/Rust/rosrust_dynamic_reconfigure" }
# rosrust_dynamic_reconfigure = { version = "0.1.0", path = "../../../rosrust_dynamic_reconfigure" }
# rosrust_dynamic_reconfigure.git = "https://github.com/ModProg/rosrust_dynamic_reconfigure"
ssloc = {version = "0.1", default-features = false, features = ["realtime", "image"]}

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "package.xml"
search = "<version>.*?</version>"
replace = "<version>{{version}}</version>"
